# git-msg-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check.py  main.py  pyproject.toml  setup.cfg  setup.py
checker/: __init__.py  test_validate.py  validate.py
