[project]
name = "git-msg-check"
version = "0.2.0"
description = "Git commit message checker"
authors = [
    { name = "Gregory Mermoud", email = "gregory.mermoud@proton.me" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
]

[project.scripts]
git-msg-check = "checker.validate:main"

